# python-project-83

./: .env  Makefile  README.md  build.sh  database.sql  package-lock.json  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: __init__.py  app.py  db.py  parser.py
page_analyzer/templates/: base.html  footer.html  index.html
page_analyzer/templates/css/static/css/: styles.css
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: index.html  show.html
tests/: db_init.py
